--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+@import url("swiper/css");
+@import url("swiper/css/pagination");
+@import url("swiper/css/navigation");
+@import url("react-toastify/dist/ReactToastify.css");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,6 +16,9 @@
 @layer components {
   input[type="checkbox"]:checked ~ label span svg {
     @apply inline-flex;
+  }
+  input[type="text"]:focus  {
+    border:none
   }
 
   .sticky .header-logo {
