--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,8 @@
   input[type="checkbox"]:checked ~ label span svg {
     @apply inline-flex;
   }
-  input[type="text"]:focus  {
-    border:none
+  input[type="text"]:focus {
+    border: none;
   }
 
   .sticky .header-logo {
@@ -42,4 +42,12 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  white-space: normal;
 }
